// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResumeButton snapshot disabled snapshot 1`] = `
<ActionButton
  as="a"
  disabled={true}
  href="#"
  onClick={
    {
      "trackCourseEvent": {
        "cardId": "cardId",
        "eventName": [MockFunction segment.enterCourseClicked],
        "url": "resume-urlexec-ed-tracking-path=cardId",
      },
    }
  }
>
  Resume
</ActionButton>
`;

exports[`ResumeButton snapshot enabled snapshot 1`] = `
<ActionButton
  as="a"
  disabled={false}
  href="#"
  onClick={
    {
      "trackCourseEvent": {
        "cardId": "cardId",
        "eventName": [MockFunction segment.enterCourseClicked],
        "url": "resume-urlexec-ed-tracking-path=cardId",
      },
    }
  }
>
  Resume
</ActionButton>
`;
